Gestion des annonces

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title> SymBNB - {% block title %}Welcome!{% endblock %}</title>
 	{% block stylesheets %}{% endblock %}
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/css/app.css">
+
 		</head>
 		<body>
 
