--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,8 +19,10 @@
 
 		<div class = "collapse navbar-collapse" id = "navbarColor01">
 		<ul class = "navbar-nav mr-auto">
-		<li class = "nav-item active">
+		<li class = "nav-item">
 		<a class="nav-link" href="{{ path('homepage')}}">  Accueil</a>
+			<li class = "nav-item">
+		<a class="nav-link" href="{{ path('ads_index')}}">  Annonces</a>
 		</ul>
 		<ul class="navbar-nav ml-auto">
 		<li class="nav-item">
