--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -2,7 +2,7 @@
 
 {%  block title %}{{ ad.title }}{% endblock %}
 	{% block body %}
-		<div class="ad-title" style="background-image: url({{ad.coverImage}})">
+		<div class="annonce-titre" style="background-image: url({{ad.coverImage}});">
 			<div class="container">
 			<h1>{{ ad.title }}</h1>
 			<p>{{ad.introduction}}</p>
@@ -12,7 +12,8 @@
 			</p>
 			<a href="#" class="btn btn-primary">Réserver</a>
 			</div>
-		</div>		
+		</div>	
+
 
 		<div class="container">
 			<div class="row">
